--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div id="slider1" class="rev_slider slider" data-version="5.0.7">
                 <ul>
                     <li data-index="rs-6" data-transition="zoomout" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="image/sliderthum.jpg"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off"  data-title="slider-1" data-description="">
-                        <img src="image/slider1.jpg" alt="">
+                        <img src="image/Site1.jpg" alt="">
                         <div class="tp-caption slide-tittle NotGeneric-Title   tp-resizeme rs-parallaxlevel-3" 
                             data-x="left"
                             data-hoffset="['0','0','0','0','20','0']" 
@@ -151,7 +151,7 @@
                             data-splitin="none" 
                             data-splitout="none" 
                             data-responsive_offset="on">
-                            <h2 style="font-size:36 px !important">To provide quality services that sets the benchmark in the market <span>.</span></h2>
+                            <h2 style="font-size:36 px !important">I believe that through knowledge and discipline, financial peace is possible for all of us. <span>.</span></h2>
                         </div>
                         <div class="tp-caption slide-p" 
                             data-x="left" 
@@ -171,7 +171,7 @@
                             data-start="1500" 
                             data-splitin="none" 
                             data-splitout="none" 
-                            data-responsive_offset="on"><p>We’ve all heard how crucial it is to set intentions, goals and targets. Powerful goals electrify us. Clear intentions energize and pull us forward.</p>
+                            data-responsive_offset="on"><p>We here at AWH provides comprehensive wealth management, retirement and investment solutions to our esteemed clients.</p>
                         </div>
 
                         <div class="tp-caption slide-button" 
@@ -196,7 +196,7 @@
                         </div>
                     </li>
                    <li data-transition="scaledownfromRight" data-title="Slide-2">
-                        <img src="image/slider1.jpg"  
+                        <img src="image/Site.jpg"  
                              alt=""
                              data-bgposition="center center" 
                              data-bgfit="cover" 
@@ -219,7 +219,7 @@
                             data-splitin="none" 
                             data-splitout="none" 
                             data-responsive_offset="on">
-                            <h2>Your money has to work for you without loss <span>.</span></h2>
+                            <h2> Great things in business are never done by one person. They're done by a team of people.<span>.</span></h2>
                         </div>
                         <div class="tp-caption slide-p" 
                             data-x="left" 
@@ -238,7 +238,7 @@
 				            data-start="1000" 
                             data-splitin="none" 
                             data-splitout="none" 
-                            data-responsive_offset="on"><p>We’ve all heard how crucial it is to set intentions, goals and targets. Powerful goals electrify us. Clear intentions energize and pull us forward.</p>
+                            data-responsive_offset="on"><p>With in-depth knowledge, and inventive ideas we at AWH provide our clients with complete business solution.</p>
                         </div>
 
                         <div class="tp-caption slide-button" 
@@ -285,7 +285,7 @@
                             data-splitin="none" 
                             data-splitout="none" 
                             data-responsive_offset="on">
-                            <h2>Your money has to work for you without loss <span>.</span></h2>
+                            <h2>Travel where your heart desires <span>.</span></h2>
                         </div>
                         <div class="tp-caption slide-p" 
                             data-x="left" 
@@ -305,7 +305,7 @@
 				            data-start="1500" 
                             data-splitin="none" 
                             data-splitout="none" 
-                            data-responsive_offset="on"><p>We’ve all heard how crucial it is to set intentions, goals and targets. Powerful goals electrify us. Clear intentions energize and pull us forward.</p>
+                            data-responsive_offset="on"><p>We at AWH provide travel solutions for a hassle free and unforgettable travel experience.</p>
                         </div>
 
                         <div class="tp-caption slide-button" 
@@ -324,6 +324,75 @@
 				            data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" 
 				            data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
 				            data-start="2000" 
+                            data-splitin="none" 
+                            data-splitout="none" 
+                            data-responsive_offset="on"><button type="button" class="btn button">read more<i class="arrow_right"></i></button>
+                        </div>
+                    </li>
+                    <li data-slotamount="7"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="image/sliderthum.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="slider-3" data-description="">
+                        <img src="image/slider1.jpg"  
+                             alt=""
+                             data-bgposition="center center" 
+                             data-bgfit="cover" 
+                             data-bgrepeat="no-repeat" 
+                             class="rev-slidebg" data-no-retina>
+                        <div class="tp-caption slide-tittle" 
+                            data-x="left" 
+                            data-hoffset="['0','0','0','0','20','0']" 
+                            data-y="top" 
+                            data-voffset="['175','130','70','70','110','65']" 
+                            data-fontsize="['60','60',50]" 
+                            data-lineheight="['60']" 
+                            data-width="['750','750','580','400','400',300']" 
+                            data-height="none" 
+                            data-whitespace="normal" 
+                            data-transform_idle="o:1;" 
+                            data-transform_in="z:0;rX:0;rY:0;rZ:5deg;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Back.easeOut;" 
+                            data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
+                            data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
+                            data-start="1000" 
+                            data-splitin="none" 
+                            data-splitout="none" 
+                            data-responsive_offset="on">
+                            <h2> Every once in a while, a new technology, an old problem, and a big idea turn into an innovation <span>.</span></h2>
+                        </div>
+                        <div class="tp-caption slide-p" 
+                            data-x="left" 
+                            data-hoffset="['0','0','0','0','20','0']" 
+                            data-y="top" 
+                            data-voffset="['337','290','230','220','235','170']" 
+                            data-fontsize="['18']" 
+                            data-lineheight="['28']" 
+                            data-width="['610','610','610','400','400',300']" 
+                            data-height="none" 
+                            data-whitespace="normal" 
+                            data-transform_idle="o:1;" 
+                            data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
+                            data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
+                            data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" 
+                            data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
+                            data-start="1500" 
+                            data-splitin="none" 
+                            data-splitout="none" 
+                            data-responsive_offset="on"><p>Creativity, inspiration and innovation are the pillars in which we excel. Backed by state-of-the-art technology, we at AWH provide our client with superior IT solution for their every need</p>
+                        </div>
+
+                        <div class="tp-caption slide-button" 
+                            data-x="left" 
+                            data-hoffset="['0','0','0','0','20','0']" 
+                            data-y="top" 
+                            data-voffset="['442','395','350']" 
+                            data-fontsize="16" 
+                            data-lineheight="['30']" 
+                            data-width="['458','458','458','400','400','290']" 
+                            data-height="none" 
+                            data-whitespace="normal" 
+                            data-transform_idle="o:1;" 
+                            data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:1500;e:Power4.easeInOut;" 
+                            data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
+                            data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" 
+                            data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
+                            data-start="2000" 
                             data-splitin="none" 
                             data-splitout="none" 
                             data-responsive_offset="on"><button type="button" class="btn button">read more<i class="arrow_right"></i></button>
