--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div id="slider1" class="rev_slider slider" data-version="5.0.7">
                 <ul>
                     <li data-index="rs-6" data-transition="zoomout" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="image/sliderthum.jpg"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off"  data-title="slider-1" data-description="">
-                        <img src="image/Site1.jpg" alt="">
+                        <img src="image/banner.png" alt="">
                         <div class="tp-caption slide-tittle NotGeneric-Title   tp-resizeme rs-parallaxlevel-3" 
                             data-x="left"
                             data-hoffset="['0','0','0','0','20','0']" 
@@ -196,7 +196,7 @@
                         </div>
                     </li>
                    <li data-transition="scaledownfromRight" data-title="Slide-2">
-                        <img src="image/Site.jpg"  
+                        <img src="image/banner.png"  
                              alt=""
                              data-bgposition="center center" 
                              data-bgfit="cover" 
